--- a/partyplane-kasse-server/package.json
+++ b/partyplane-kasse-server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "jsonschema": "^1.2.4",
     "jsonwebtoken": "^8.2.1",
+    "mysql2": "^1.6.1",
     "zxcvbn": "^4.4.2"
   }
 }
