more tests added

--- a/partyplane-kasse-server/package.json
+++ b/partyplane-kasse-server/package.json
@@ -34,6 +34,9 @@
   },
   "nyc": {
     "exclude": [
+      "src/database/DatabaseController.js",
+      "**/*Repository.js",
+      "src/index.js",
       "**/*.spec.js",
       "**/*.int.js"
     ],
